--- a/styles/2-about.css
+++ b/styles/2-about.css
@@ -16,16 +16,21 @@ a {
     color: black;
 }
 
-a:hover {
-    
-}
 
+/* NAV SECTION MENU BAR */
 header {
    display:flex;
    justify-content: space-between;
 }
 
+#page-icon {
+text-align: left;
+padding: 5px;
+font-size: 30px;
+color: black;
+}
 
+/* Using Checkbox hack */
 #checkbox {
     display: none;
 }
@@ -39,6 +44,12 @@ header {
 .button:hover {
     background-color: black;
     color: white;
+}
+
+.menu-dropdown {
+    display: block;
+    padding-top: 10px;
+    padding-right: 30px;
 }
 
 
@@ -69,51 +80,55 @@ box-shadow: none;
     z-index: 1;
 }
 
-.menu-dropdown {
-    display: block;
-    padding-top: 10px;
-    padding-right: 30px;
-}
 
-#page-icon {
-text-align: left;
-padding: 5px;
-font-size: 30px;
-color: black;
-}
-
-
-/* ABOUT SECTION */
+/* ABOUT SECTION - GENERAL */
 
 .about-section {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     
-    padding-left: 10px;
-    padding-right: 10px; 
-    margin-bottom: 20px;
-    width: 80vw;
+    justify-content: center;
+    padding-left: 15px;
+    padding-right: 15px; 
+    width: 85vw;
     max-width: 100%;
-    text-size-adjust: 100%;
-    margin: 30px 10% 5% 10%;
+    margin: 50px 10% 5% 10%;
 }
 
-.bio-section {
-    display: inline-block;
-}
 
+
+/* HEADING */
 h1 {
     padding-bottom: 60px;
-    padding-top: 5rem;
+    padding-top: 3rem;
     font-size: 3rem;
     display: block;
 }
 
+/* PHOTO */
 .bio-photo {
+   display: flex;
+   flex-basis: 50%;
+   margin: 1.5em;
+   background-size: cover;
+    background-position: bottom;
+    height: 50vh;
+}
+
+img {
+    border: 3px black solid;
+}
+
+/* SMALL BIO PARAGRAPH */
+p {
+    font-size: 20px;
     
-    max-width: 80%;
-    display: inline-block;
+}
+
+.small-bio {
+    flex-basis: 44%;
+    margin: 1em;
+    display: block;
 }
 
 .small-bio > a {
@@ -126,36 +141,46 @@ color: white;
     color: black;
 }
 
-p {
-    color: black;
-    margin: 1em;
 
-}
 
-img {
-    border-radius: 10px;
-    border: 3px black solid;
-    
-    float: left;
-}
 
+/* EDUCATION SECTION */
 .education-section {
-    color: black;
-    display: inline;
+    flex-basis: 100%;
+    display: block;
+    margin: 1em;
 }
 
 li {
     list-style: none;
+    padding: 5px;
+    font-size: 18px;
 }
 
-@media screen and (max-width: 650px) {
+/* MEDIA BREAKPOINTS */
+
+@media screen and (max-width: 550px) {
     .small-bio {
         display: block;
-        position: relative;
-        margin: 70px;
-        padding-top: 30px;
+        flex-basis: 100%;
+        width: 100%;
+        padding-right: 10px;
+        padding-left: 10px;
     }
     img {
-        justify-content: center;
+        display: block;
+        margin: 2em; 
     }
+}
+
+@media screen and (max-width: 800px) {
+.small-bio {
+        display: block;
+        flex-basis: 100%;
+    }
+.bio-photo {
+    flex-basis: 100%;
+    height: 60vh;
+}
+
 }
